--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.1
 Keras==2.2.4
+tensorflow==1.12.2
 Keras-Applications==1.0.7
 Keras-Preprocessing==1.0.9
 Markdown==3.1
