--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 Flask>=1.0.2
-h5py>=2.9.0
-idna>=2.8
+h5py==3.1.0
+idna>=2.5
 itsdangerous>=1.1.0
 Jinja2>=2.10.1
 Keras>=2.2.4
 Keras-Applications>=1.0.7
 Keras-Preprocessing>=1.0.9
 tensorflow==2.5.0rc0
-numpy>=1.16.2
+numpy==1.19.2
 requests>=2.21.0
