--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+pip==20.2.4
 Flask>=1.0.2
 h5py==3.1.0
 gunicorn==19.9.0
@@ -12,3 +13,4 @@ tensorflow==2.5.0rc1
 requests>=2.21.0
 matplotlib>=1.4.3
 pandas>=0.19
+numpy==1.19.2
